name:                chapter-exercises
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/willprice/chapterExercises#readme
license:             BSD3
license-file:        LICENSE
author:              Will Price
maintainer:          will.price94@gmail.com
copyright:           2018 Will Price
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  exposed-modules:     WordNumber
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-orphans -fwarn-tabs
  build-depends:       base >= 4.7 && < 5

executable chapter-exercises
  main-is:             Main.hs
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-orphans -fwarn-tabs
  build-depends:       base >= 4.7 && < 5
                     , chapter-exercises

test-suite chapter-exercises-tests
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
        test
  ghc-options:         -Wall -fno-warn-orphans -fwarn-tabs
  build-depends:       base >= 4.7 && < 5
                     , QuickCheck
                     , hspec
                     , chapter-exercises
  default-language:    Haskell2010
