name:                optional
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/willprice/optional#readme
license:             BSD3
license-file:        LICENSE
author:              Will Price
maintainer:          will.price94@gmail.com
copyright:           2018 Will Price
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  exposed-modules:     Data.Optional
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-orphans -fwarn-tabs
  build-depends:       base >= 4.7 && < 5

test-suite optional-tests
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
        test
  ghc-options:         -Wall -fno-warn-orphans -fwarn-tabs
  build-depends:       base >= 4.7 && < 5
                     , QuickCheck
                     , hspec
                     , optional
  default-language:    Haskell2010
